--- a/config.yaml
+++ b/config.yaml
@@ -1,29 +1,47 @@
-cookie:
-  expiry_days: 30
-  key: some_signature_key
-  name: some_cookie_name
+#cookie:
+#  expiry_days: 30
+#  key: some_signature_key
+#  name: some_cookie_name
+#credentials:
+#  usernames:
+#    dbaldwin:
+#      email: dbaldwin@gmail.com
+#      logged_in: false
+#      name: David Baldwin
+#      password: $2b$12$E9/bCaN/r8sN/FV2l8NpgOgspUBAp7UAVU6BgsXJzp/pW8gQWCprC
+#    jsmith:
+#      email: jsmith@gmail.com
+#      logged_in: false
+#      name: John Smith
+#      password: $2b$12$iWlVOac3uujRvTrXDi6wructXftKmo/GyQd6SMu5FmyX306kH.yFO
+#    rbriggs:
+#      email: rbriggs@gmail.com
+#      logged_in: false
+#      name: Rebecca Briggs
+#      password: $2b$12$uNaTgvGPG9rMbzOJHYaPQePw0DUfp1qHBrSq6l4O304qani6pKFpm
+#    rcouper:
+#      email: rcouper@gmail.com
+#      logged_in: false
+#      name: Ross Couper
+#      password: $2b$12$Tir/PbHVmmnt5kgNxgOwMuxNIb2fv2pJ.q71TW8ekvbugCqkye4yu
+#preauthorized:
+#  emails:
+#  - melsby@gmail.com
+
 credentials:
   usernames:
-    dbaldwin:
-      email: dbaldwin@gmail.com
-      logged_in: false
-      name: David Baldwin
-      password: $2b$12$E9/bCaN/r8sN/FV2l8NpgOgspUBAp7UAVU6BgsXJzp/pW8gQWCprC
     jsmith:
       email: jsmith@gmail.com
-      logged_in: false
       name: John Smith
-      password: $2b$12$iWlVOac3uujRvTrXDi6wructXftKmo/GyQd6SMu5FmyX306kH.yFO
+      password: abc # To be replaced with hashed password
     rbriggs:
       email: rbriggs@gmail.com
-      logged_in: false
       name: Rebecca Briggs
-      password: $2b$12$uNaTgvGPG9rMbzOJHYaPQePw0DUfp1qHBrSq6l4O304qani6pKFpm
-    rcouper:
-      email: rcouper@gmail.com
-      logged_in: false
-      name: Ross Couper
-      password: $2b$12$Tir/PbHVmmnt5kgNxgOwMuxNIb2fv2pJ.q71TW8ekvbugCqkye4yu
+      password: def # To be replaced with hashed password
+cookie:
+  expiry_days: 30
+  key: random_signature_key # Must be string
+  name: random_cookie_name
 preauthorized:
   emails:
   - melsby@gmail.com
